--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main>
     <section class="hero" id="top">
       <div class="container">
-        <h2>Hi, I'm <span class="accent">batman</span>.</h2>
+        <h2>I'm <span class="accent">batman</span>.</h2>
         <p class="subtitle"> Seeking to equip my aspiring profession in mathematical computing with innovation, intelligence, and
 integrity by seizing opportunities for research, robust education, and reputable character.</p>
         <div class="hero-actions">
