Update Project One page and project listing
- Manual edits to project-one.html content
- Updates to script.js project configuration

--- a/project-one.html
+++ b/project-one.html
@@ -39,10 +39,10 @@
           
           <h3>Time Tracking Format</h3>
           <ul>
-            <li><strong>Granularity</strong>: Activities logged with military time timestamps (HHMM format)</li>
-            <li><strong>Coverage</strong>: Complete daily coverage from wake-up to sleep</li>
-            <li><strong>Duration</strong>: 8 total weeks of data</li>
-            <li><strong>Organization</strong>: Sequential daily segments with header information</li>
+            <li><strong>Simple</strong>: Activities logged with military time timestamps (HHMM format)</li>
+            <li><strong>Comprehensive</strong>: Complete daily coverage from wake-up to sleep</li>
+            <li><strong>Thorough</strong>: 8 total weeks of data</li>
+            <li><strong>Organized</strong>: Sequential daily segments with header information for eac hday</li>
           </ul>
 
           <h3>Activity Categories</h3>
@@ -50,11 +50,11 @@
           <ul>
             <li><strong>GOD</strong>: Spiritual and religious activities</li>
             <li><strong>P</strong>: Program/academic work</li>
-            <li><strong>R</strong>: Research activities</li>
+            <li><strong>R</strong>: Routine activities</li>
             <li><strong>E</strong>: Exercise and physical activities</li>
             <li><strong>S</strong>: Social interactions and communication</li>
             <li><strong>F</strong>: Fun and recreational activities</li>
-            <li><strong>W</strong>: Workout activities (distinct from general exercise)</li>
+            <li><strong>W</strong>: Workout and exercise</li>
             <li><strong>LO</strong>: Sleep/lights out marker</li>
           </ul>
 
@@ -79,7 +79,7 @@
           <h3>Visualizations</h3>
           <ul>
             <li><strong>Sequential block charts</strong>: Stacked bar charts showing daily hours across 7-day periods</li>
-            <li><strong>Category breakdown</strong>: Visual representation of time allocation patterns</li>
+            <li><strong>Category breakdown</strong>: Visual representation of patterns in how time is allocated across categories</li>
             <li><strong>Weekly progression</strong>: Tracking changes in activity patterns over time</li>
           </ul>
 
@@ -96,6 +96,11 @@
             <h2>Analysis Results</h2>
             <img src="p1/barchart.png" alt="Activity Time Tracking Bar Chart Analysis" class="project-image" />
           </div>
+
+          <h2>Conclusion</h2>
+          <ul>
+            <li>Coming soon-></li>
+          </ul>
 
           <p class="project-footer"><em>Analysis covers comprehensive personal time tracking with minute-level precision across 8 weeks of daily activity logging.</em></p>
         </div>
