Add source code link to Project One page
- Added Implementation section with link to activity_pipeline.py
- Users can now access the full Python script for the analysis
- Added styling for source code link button
- Link opens in new tab for easy reference

--- a/project-one.html
+++ b/project-one.html
@@ -33,7 +33,7 @@
 
         <div class="project-content">
           <h2>Overview</h2>
-          <p>This project analyzes personal time tracking data covering 8 weeks (4 pairs of two-week periods) of comprehensive activity logging from waking to sleeping hours. The analysis processes raw time-stamped activity logs and generates detailed metrics, visualizations, and quality reports.</p>
+          <p>This project analyzes personal time tracking data covering 8 weeks (4 pairs of two-week periods) of comprehensive activity logging from waking to sleeping hours. The analysis processes raw time-stamped activity logs and generates detailed metrics, visualizations, and qualitative reports.</p>
 
           <h2>Data Structure</h2>
           
@@ -91,6 +91,14 @@
             <li>Sleep vs. awake time ratios</li>
             <li>Activity transition</li>
           </ul>
+
+          <h2>Implementation</h2>
+          <p>The complete data processing pipeline is implemented in Python, handling everything from raw data ingestion to visualization generation. The script processes time-stamped activity logs, performs data validation, and generates comprehensive analytics.</p>
+          <div class="source-code-link">
+            <a href="p1/activity_pipeline.py" class="btn" target="_blank" rel="noopener">
+              📄 View Source Code (activity_pipeline.py)
+            </a>
+          </div>
 
           <div class="project-visualization">
             <h2>Analysis Results</h2>
