--- a/project-one.html
+++ b/project-one.html
@@ -33,6 +33,8 @@
 
         <div class="project-content">
           <h2>Overview</h2>
+          <p>Many have searched for a strong, organized schedule to tell them what to do, but what about the schedule that occurred last week: Did it transpire how we imagined it to? What about the week before? The semester? Does anything go along with our schedule? Hopefully most thing, but how about measuring with precision the statements like, “I should be able to make it this weekend”, “That project took me all day”, and pick apart the verity of statements like “I just don’t have time.” Whilst confidently promising other exchanges like “Bro, I’ll be open after work this weekend,” I got pretty tired of overestimating my availability. Thus, <strong>the goal of this project is to give a strong glimpse into <em>how much availability</em> we really have</strong> in the day and through the week (based on our regular time for non-negotiables like routine, work, and school as well as negotiable like personal time, socializing, and spontaneous pockets).</p>
+          <h2>Project Description</h2>
           <p>This project analyzes personal time tracking data covering 8 weeks (4 pairs of two-week periods) of comprehensive activity logging from waking to sleeping hours. The analysis processes raw time-stamped activity logs and generates detailed metrics, visualizations, and qualitative reports.</p>
 
           <h2>Data Structure</h2>
