Major Project One page updates and homepage improvements
- Updated homepage resume button to fun YouTube redirect
- Completely restructured Project One page:
  - Moved Technical Report section to bottom
  - Added all 6 graph visualizations to Analysis Results
  - Added descriptive text for each visualization
  - Added personal commentary about non-intuitive findings
  - Added Reflection subsection with honest project assessment
- Enhanced CSS styling for individual chart containers
- Added new graph PNG files (graphs1-6) to repository

--- a/project-one.html
+++ b/project-one.html
@@ -94,23 +94,63 @@
             <li>Activity transition</li>
           </ul>
 
-          <h2>Implementation</h2>
+          <div class="project-visualization">
+            <h2>Analysis Results</h2>
+            <p>The comprehensive analysis generated multiple visualizations to understand time allocation patterns across the 8-week tracking period:</p>
+            
+            <div class="analysis-chart">
+              <img src="graphs1.png" alt="Time Tracking Analysis Graph 1" class="project-image" />
+              <p class="chart-description">This visualization shows the overall time distribution across major activity categories. The data reveals clear patterns in how time is allocated between work, personal activities, and routine tasks throughout the tracking period.</p>
+            </div>
+
+            <div class="analysis-chart">
+              <img src="graphs2.png" alt="Time Tracking Analysis Graph 2" class="project-image" />
+              <p class="chart-description">Weekly progression analysis demonstrates how activity patterns evolved over the 8-week period. Notable shifts in time allocation can be observed as routines were established and adjusted.</p>
+            </div>
+
+            <div class="analysis-chart">
+              <img src="graphs3.png" alt="Time Tracking Analysis Graph 3" class="project-image" />
+              <p class="chart-description">Daily activity breakdown provides insight into typical day structures and identifies peak periods for different categories of activities. This granular view helps understand optimal scheduling windows.</p>
+            </div>
+
+            <div class="analysis-chart">
+              <img src="graphs4.png" alt="Time Tracking Analysis Graph 4" class="project-image" />
+              <p class="chart-description">Category comparison analysis highlights the relative time investment across spiritual, academic, social, and recreational activities. This data-driven perspective reveals actual versus perceived time allocation.</p>
+            </div>
+
+            <div class="analysis-chart">
+              <img src="graphs5.png" alt="Time Tracking Analysis Graph 5" class="project-image" />
+              <p class="chart-description">Sleep pattern analysis tracks consistency in rest schedules and identifies correlations between sleep timing and daily productivity metrics. This information supports evidence-based schedule optimization.</p>
+            </div>
+
+            <div class="analysis-chart">
+              <img src="graphs6.png" alt="Time Tracking Analysis Graph 6" class="project-image" />
+              <p class="chart-description">Comprehensive temporal mapping shows the complete 8-week timeline with activity density and transition patterns. This macro view enables identification of longer-term trends and seasonal variations in behavior.</p>
+            </div>
+
+            <div class="analysis-chart">
+              <img src="p1/barchart.png" alt="Activity Time Tracking Bar Chart Analysis" class="project-image" />
+              <p class="chart-description">The final bar chart synthesis presents the cumulative findings in a clear, actionable format. This summary visualization serves as the primary reference for understanding overall time allocation effectiveness and availability patterns.</p>
+            </div>
+          </div>
+
+          <p>I have chosen these charts in order to find out some of these indicators of non-intuitive time spending because as you'll see some of these graphs do not reflect what I think (and possibly what you would think) is where your time and your day goes. So let's find out. 😎</p>
+
+          <h3>Reflection</h3>
+          <p>A lot of the code and graph generation worked, but there were so many anomalies and they're still just a couple left in the data that were hard to clean out, and that I will clean out for project 2. I would definitely change about this to clean all of my code 1st thoroughly and it's OK if some miss but this is a necessary step for any data scientist. 😜</p>
+
+          <h2>Conclusion</h2>
+          <ul>
+            <li>Coming soon-></li>
+          </ul>
+
+          <h2>Technical Report</h2>
           <p>The complete data processing pipeline is implemented in Python, handling everything from raw data ingestion to visualization generation. The script processes time-stamped activity logs, performs data validation, and generates comprehensive analytics.</p>
           <div class="source-code-link">
             <a href="p1/activity_pipeline.py" class="btn" target="_blank" rel="noopener">
               📄 View Source Code (activity_pipeline.py)
             </a>
           </div>
-
-          <div class="project-visualization">
-            <h2>Analysis Results</h2>
-            <img src="p1/barchart.png" alt="Activity Time Tracking Bar Chart Analysis" class="project-image" />
-          </div>
-
-          <h2>Conclusion</h2>
-          <ul>
-            <li>Coming soon-></li>
-          </ul>
 
           <p class="project-footer"><em>Analysis covers comprehensive personal time tracking with minute-level precision across 8 weeks of daily activity logging.</em></p>
         </div>
