--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 integrity by seizing opportunities for research, robust education, and reputable character.</p>
         <div class="hero-actions">
           <a class="btn primary" href="#projects">View Projects</a>
-          <a class="btn" href="resume.pdf" target="_blank" rel="noopener">Resume</a>
+          <a class="btn" href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran" target="_blank" rel="noopener">sorry...had_to:)))</a>
         </div>
       </div>
     </section>
