j fixed a few typos this morning

--- a/project-one.html
+++ b/project-one.html
@@ -52,12 +52,12 @@
           <h3>Activity Categories</h3>
           <p>The system uses a structured categorization approach with the following primary categories:</p>
           <ul>
-            <li><strong>GOD</strong>: Spiritual and religious activities</li>
-            <li><strong>P</strong>: Program/academic work</li>
+            <li><strong>GOD</strong>: Ministry or time with God</li>
+            <li><strong>P</strong>: Productivity: Academic, work, or research</li>
             <li><strong>R</strong>: Routine activities</li>
-            <li><strong>E</strong>: Exercise and physical activities</li>
+            <li><strong>E</strong>: Eating, prepping, cleanup</li>
             <li><strong>S</strong>: Social interactions and communication</li>
-            <li><strong>F</strong>: Fun and recreational activities</li>
+            <li><strong>F</strong>: Fun or personal time<li>
             <li><strong>W</strong>: Workout and exercise</li>
             <li><strong>LO</strong>: Sleep/lights out marker</li>
           </ul>
@@ -102,7 +102,7 @@
             
             <div class="analysis-chart">
               <img src="graphs1.png" alt="Time Tracking Analysis Graph 1" class="project-image" />
-              <p class="chart-description"> Ever wondered how much time you actually spend on your homework versus your time you spend in the classroom? *they say you should spend two hours outside the classroom as you do inside the classroom...*.</p>
+              <p class="chart-description"> Ever wondered how much time you actually spend on your homework versus your time you spend in the classroom? <em>they say you should spend two hours outside the classroom as you do inside the classroom...</em>.</p>
             </div>
 
             <div class="analysis-chart">
@@ -112,7 +112,7 @@
 
             <div class="analysis-chart">
               <img src="graphs3.png" alt="Time Tracking Analysis Graph 3" class="project-image" />
-              <p class="chart-description">Here's the week split! A little too much routine... I promise, I don't have that much routine. (Note that *routine* includes driving, walking, getting ready for the morning or night, and the facilties 😉).</p>
+              <p class="chart-description">Here's the week split! A little too much routine... I promise, I don't have that much routine. (Note that </em>routine</em> includes driving, walking, getting ready for the morning or night, and the facilties 😉).</p>
             </div>
 
             <div class="analysis-chart">
@@ -127,12 +127,12 @@
 
             <div class="analysis-chart">
               <img src="graphs6.png" alt="Time Tracking Analysis Graph 6" class="project-image" />
-              <p class="chart-description">Just for demonstration--this is the struggle of making your own dtaset! This is how I catch anomalies, because I'm pretty sure I didn't spend *36 hours on Routine in a single day*....</p>
+              <p class="chart-description">Just for demonstration--this is the struggle of making your own dtaset! This is how I catch anomalies, because I'm pretty sure I didn't spend <em>36 hours on Routine in a single day</em>....</p>
             </div>
           </div>
 
           <h2>Conclusion</h2>
-          <p>So there you have it that's where *my* time went, and I sure do spend a lot more time doing the routine things, even though I thought that that was one of my strongest categories of reduction… But, I give myself the benefit of the doubt that perhaps I have some more data cleaning to do, or I just have to accept the fact that I am high maintenance :( I am quite interested in caging the best ways to be productive and so I actually hope to take this program to apply it to other people who will observe their own time or, *if they're willing*, I can track it for them. And overall, we can become more time cognizant, and seeing how we spend our time and carefully choose our days wisely.</p>
+          <p>So there you have it that's where <em>my</em> time went, and I sure do spend a lot more time doing the routine things, even though I thought that that was one of my strongest categories of reduction… But, I give myself the benefit of the doubt that perhaps I have some more data cleaning to do, or I just have to accept the fact that I am high maintenance :( I am quite interested in caging the best ways to be productive and so I actually hope to take this program to apply it to other people who will observe their own time or, <em>if they're willing</em>, I can track it for them. And overall, we can become more time cognizant, and seeing how we spend our time and carefully choose our days wisely.</p>
           
           <div class="quote-box">
             <p><em>"It's not that we have a short time to live, it's that we waste much of it. Life is long if you know how to use it. Most of us spend it in distraction or the pursuit of things that don't really matter, as if we were going to live forever. We act as mortals in all we fear and immortals in all we desire."</em></p>
@@ -166,5 +166,10 @@
     }
     window.addEventListener('DOMContentLoaded', setYear);
   </script>
+
+          <ul>
+            <li>Ackowledgement: I know this analysis an these graphs are elementary, but I do want to increase complexity and insight in Project 2's Dashboards 😎</li>
+          </ul>
+
 </body>
 </html>
