--- a/project-one.html
+++ b/project-one.html
@@ -37,7 +37,9 @@
           <p>Many have searched for a strong, organized schedule to tell them what to do, but what about the schedule that occurred last week: Did it transpire how we imagined it to? What about the week before? The semester? Does anything go along with our schedule? Hopefully most thing, but how about measuring with precision the statements like, “I should be able to make it this weekend”, “That project took me all day”, and pick apart the verity of statements like “I just don’t have time.” Whilst confidently promising other exchanges like “Bro, I’ll be open after work this weekend,” I got pretty tired of overestimating my availability. Thus, <strong>the goal of this project is to give a strong glimpse into <em>how much availability</em> we really have</strong> in the day and through the week (based on our regular time for non-negotiables like routine, work, and school as well as negotiable like personal time, socializing, and spontaneous pockets).</p>
           <h2>Project Description</h2>
           <p>This project analyzes personal time tracking data covering 8 weeks (4 pairs of two-week periods) of comprehensive activity logging from waking to sleeping hours. The analysis processes raw time-stamped activity logs and generates detailed metrics, visualizations, and qualitative reports.</p>
-          <p><em>*Definitely was undergirded by my artificially intelligent friend named Claude in making these visualizations for my project ⭐️</em></p>
+          <ul>
+            <li><em>*Definitely was undergirded by my artificially intelligent friend named Claude in making these visualizations for my project ⭐️</em></li>
+          </ul>
 
           <h2>Data Structure</h2>
           
@@ -155,6 +157,10 @@
 
   <footer class="site-footer">
     <div class="container">
+          <ul>
+            <li>Acknowledgement: I know this analysis and these graphs are elementary, but I do want to increase complexity and insight in Project 2's Dashboards 😎</li>
+          </ul>
+
       <p>&copy; <span id="year"></span> batcavern. All rights reserved.</p>
     </div>
   </footer>
@@ -167,9 +173,7 @@
     window.addEventListener('DOMContentLoaded', setYear);
   </script>
 
-          <ul>
-            <li>Ackowledgement: I know this analysis an these graphs are elementary, but I do want to increase complexity and insight in Project 2's Dashboards 😎</li>
-          </ul>
+
 
 </body>
 </html>
